--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>React Boilerplate</title>
-	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Arimo|Didact+Gothic" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+
 
 </head>
 <body>
