--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Boilerplate</title>
+	<link rel="icon" type="image/png" href="images/mic.png" />
+	<title>Live Music WishList</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Arimo|Didact+Gothic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
